fix: add display none style to scroll bar in overflow

--- a/src/pages/global.css
+++ b/src/pages/global.css
@@ -22,3 +22,11 @@
 .overflow-scrollx::-webkit-scrollbar {
   display: none;
 }
+
+.overflow-x-scroll::-webkit-scrollbar {
+  display: none;
+}
+
+.overflow-y-scroll::-webkit-scrollbar {
+  display: none;
+}
